# NonPositionalInvertedIndex

./: BVHGog.cpp  BVHGog.h  BVHGog.hpp  CMakeLists.txt  DocumentInfo.cpp  DocumentInfo.h  DocumentsHandler.cpp  DocumentsHandler.h  IWordToDocFreqMap.h  InvertedIndex.cpp  InvertedIndex.h  InvertedIndex.hpp  README.md  WTHGog.cpp  WTHGog.h  WTHGog.hpp  WTHGogHandler.cpp  WTHGogHandler.h  main.cpp
comparison/mifluz/: CMakeLists.txt  mifluz_comparison.cpp
examples/: example_1.cpp  example_2_load_from_disk.cpp
examples/hello_world/: hello_1.txt  hello_2.txt  hello_4.txt
examples/lorem_ipsum/: corpus_config.toml  dataset-full-corpus.txt  lip3.txt  lip4.txt
include/: BVHGog.hpp  CircularQueue.hpp  DocumentInfo.h  DocumentInfo.hpp  DocumentsHandler.h  DocumentsHandler.hpp  InvertedIndex.hpp  NonPosInvIdx.h  NonPosInvIdx.hpp  SafeQueue.hpp  SimpleStorage.hpp  TermGrouping.hpp  TermOrdering.hpp  WTHGog.hpp
metatoolkit-ividx/lorem_ipsum_meta/: config.toml
metatoolkit-ividx/lorem_ipsum_meta/lorem_ipsum_idx/inv/: config.toml  labelids.mapping  metadata.db  metadata.index  postings.index  postings.index_index  termids.mapping  termids.mapping.inverse
src/: DocumentInfo.cpp  DocumentsHandler.cpp  build_inverted_index.cpp  multiple_query_index.cpp  prueba_circular.cpp  single_query_index.cpp
